@@ -1,5 +1,8 @@
 [b]Version 0.6.2[/b]:
 
+(2008-07-26)
+ * Added an option in Preferences->Performance to set the cache for VCDs.
+
 (2008-07-25)
  * Added an option in Preferences->Performance to set the cache for
    audio CDs.
